--- a/.github/workflows/synk.yml
+++ b/.github/workflows/synk.yml
@@ -1,40 +1,35 @@
 name: Snyk Security Scan
 
-# 1. Triggers: Automatically run on every push and pull request to main
 on:
   push:
     branches: ["main"]
   pull_request:
     branches: ["main"]
-  workflow_dispatch: # Allows manual trigger from the Actions tab
+  workflow_dispatch:
 
 jobs:
   security:
     runs-on: ubuntu-latest
     steps:
-      # 2. Pull the latest code from your repository
       - name: Checkout Code
         uses: actions/checkout@v4
 
-      # 3. Setup Node.js (Version 20 is recommended for current stability)
       - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
           node-version: '20'
 
-      # 4. Install dependencies - Required for Snyk to analyze the package-lock.json
+      # Snyk needs the project to be 'built' or 'installed' to see dependencies
       - name: Install Dependencies
         run: npm install 
 
-      # 5. Run Snyk Security Scan
-      - name: Run Snyk to check for vulnerabilities
-        uses: snyk/actions/node@master
-        # The Action will fail the build (Red X) if high-severity issues are found
-        continue-on-error: false 
+      # We install the CLI manually to ensure perfect authentication
+      - name: Install Snyk CLI
+        run: npm install -g snyk
+
+      # This runs the scan using the CLI directly
+      - name: Run Snyk Test
+        run: snyk test --all-projects --severity-threshold=high
         env:
-          # This MUST match the secret name you created in GitHub Settings
+          # Ensure this matches the name in your GitHub Secrets exactly
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
-        with:
-          # --all-projects: Scans all manifest files found (useful for nested folders)
-          # --severity-threshold=high: Only fail the build for High or Critical bugs
-          args: --all-projects --severity-threshold=high
