--- a/.github/workflows/synk.yml
+++ b/.github/workflows/synk.yml
@@ -29,7 +29,12 @@ jobs:
 
       # This runs the scan using the CLI directly
       - name: Run Snyk Test
-        run: snyk test --all-projects --severity-threshold=high
+      
+        run: |
+          # Manually authenticate the CLI using the secret
+          snyk auth ${{ secrets.SNYK_TOKEN }}
+          # Run the scan
+          snyk test --all-projects --severity-threshold=high
         env:
           # Ensure this matches the name in your GitHub Secrets exactly
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
